# blue-pill-rtfm-demo

./: Cargo.toml  README.md  flash.bat  memory.x  ocd.cmd  ocd.sh  rust_1bpp.raw  rust_8bpp.raw  samuel.raw  samuel.xcf  samuel_1bpp.raw
.cargo/: config
src/: main.rs  ssd1306.rs
tools/: img_to_raw.sh  stm32f1x.cfg
