[package]
name = "blue-pill-rtfm-demo"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[dependencies]
cortex-m = "0.4.3"
cortex-m-semihosting = "0.2.0"
nb = "0.1.1"
embedded-hal = "0.1.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

# Must be installed from Git currently, not sure why it's not on crates.io
# TODO: Replace this with a "normal" dependency in the future
[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
features = ["rt"]
version = "*"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
